src/App.css
* {
  box-sizing: border-box;
}

html {
  background-color: #c6d1d8;
  font-family: sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.page-base__content {
  width: 38rem;
  max-width: 95vw;
  padding: 2rem;
  background-color: white;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
  border-radius: 4px;
}

a, .link {
  font-size: 1em;
  background: none;
  border: none;
  color: #0000EE;
  padding: 0;
  text-decoration: underline;
}

/*# sourceMappingURL=App.css.map */

